feat: rebuild personal blog and add deployment stack